--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,9 +15,9 @@
                 <h1>{{ page.landing-title }}</h1>
             </header>
             <div class="content">
-                <p style="text-transform: uppercase;">{{ site.description }}</p>
+                <!-- <p style="text-transform: uppercase;">{{ site.description }}</p> -->
                 <ul class="actions">
-                    <li><a href="#one" class="button next scrolly">Get Started</a></li>
+                    <li><a href="#one" class="button next scrolly">Our Approach</a></li>
                 </ul>
             </div>
         </div>
