--- a/_sass/layout/_banner.scss
+++ b/_sass/layout/_banner.scss
@@ -1,9 +1,3 @@
-///
-/// Forty by HTML5 UP
-/// html5up.net | @ajlkn
-/// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-///
-
 /* Banner */
 
 	#banner {
@@ -41,8 +35,11 @@
 		}
 
 		h1 {
-			font-size: 3.25em;
-		}
+			font-family: 'Exo 2', sans-serif;
+			font-size: 3.5em;
+		}		  
+		  
+		  
 
 		> .inner {
 			@include vendor('transition', (
