--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,7 +5,7 @@
 @import 'libs/mixins';
 @import 'libs/skel';
 @import 'font-awesome.min.css';
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,600,600italic');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&family=Exo+2');
 
 	@include skel-breakpoints((
 		xlarge: '(max-width: 1680px)',
