--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@
             <div class="content">
                 <!-- <p style="text-transform: uppercase;">{{ site.description }}</p> -->
                 <ul class="actions">
-                    <li><a href="#one" class="button next scrolly">Our Approach</a></li>
+                    <li><a href="#one" class="button next scrolly">Our Work</a></li>
                 </ul>
             </div>
         </div>
@@ -33,12 +33,12 @@
         <section id="two">
             <div class="inner">
                 <header class="major">
-                    <h2>Massa libero</h2>
+                    <h2>About Us</h2>
                 </header>
                 <p>{{ content }}</p>
-                <ul class="actions">
-                    <li><a href="landing.html" class="button next">Get Started</a></li>
-                </ul>
+                <!-- <ul class="actions">
+                    <li><a href="landing.html" class="button next">Learn More</a></li>
+                </ul> -->
             </div>
         </section>
 
