--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,8 +29,8 @@
 		    {% endif %}
 		{% endfor %}
 	</ul>
-	<ul class="actions vertical">
+	<!-- <ul class="actions vertical">
 		<li><a href="#" class="button special fit">Learn More</a></li>
 		<li><a href="#" class="button fit">Log In</a></li>
-	</ul>
+	</ul> -->
 </nav>
